Added new information on general tab view where placed info about how much people answered on specific answer.

--- a/execution_app/static/css/execution.css
+++ b/execution_app/static/css/execution.css
@@ -264,6 +264,7 @@ main {
     border: none;
     border-radius: 10px;
     cursor: pointer;
+    text-align: center;
 }
 #answers input[type="checkbox"]:checked {
     opacity: 1;
