--- a/execution_app/templates/enter_code.html
+++ b/execution_app/templates/enter_code.html
@@ -11,7 +11,14 @@
             <p>GPTQuiz</p>
             <div class = 'input_code'>
                 <input type="text" name="code" placeholder="Введіть код">
-                <button class="button_code" type="submit">ПРИЄДНАТИСЬ</button> 
+                <button class="button_code" type="submit">ПРИЄДНАТИСЬ</button>
+                {% if error == "USER_NOT_FROM_THIS_CLASSROOM" %}
+                    <div class="error-container">
+                            <p class="error-text">Вибачте, але ви не з цього класу.</p>
+                            <p class="error-text">Вам доступ заборонений.</p>
+                            <a href="/logout?redirect_to=/execution?code={{ code }}">Вийти з акаунту</a>
+                    </div> 
+                {% endif %}
             </div> 
         </form>
     </body>
