--- a/host_app/static/css/hostingroom.css
+++ b/host_app/static/css/hostingroom.css
@@ -4,7 +4,16 @@
     box-sizing: border-box;
     color: white;
 }
-
+::-webkit-scrollbar {
+    display: block;
+    width: 7px;
+    background-color: #202020;
+    border-radius: 45px;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #9C47FF;
+    border-radius: 45px;
+}
 body {
     margin: 0;
     font-family: Arial, Helvetica, sans-serif;
@@ -384,6 +393,8 @@ li:hover .check_mark {
     flex-wrap: wrap;
     width: 100%;
     gap: 10px;
+    max-height: 100%;
+    overflow: auto;
 }
 .studentsContainer.hideblock {
     display: none;
@@ -463,6 +474,8 @@ li:hover .check_mark {
     flex-direction: column;
     width: 100%;
     gap: 10px;
+    max-height: 100%;
+    overflow: auto;
 }
 .variant-container {
     display: grid;
