--- a/host_app/static/css/hostingroom.css
+++ b/host_app/static/css/hostingroom.css
@@ -166,26 +166,37 @@ body {
     gap: 20px;
 }
 #users {
-    list-style-type: none;
     width: 100%;
     max-height: 80vh;
     overflow-y: auto;
 }
 li{
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+    margin-left: 20px;
     min-height: 25px;
 }
-li > p{
+.divLi {
+    width: 100%;
+    display: flex;
+    flex-direction: row;
+    min-height: 25px;
+    gap: 8px;
+}
+.nickname {
     width: 90%;
 }
 .delete-user-btn {
     display: none;
     width: 20px;
+    height: 20px;
+    background: none;
+    border: none;
+    cursor: pointer;
 }
 li:hover .delete-user-btn {
-    display: block;
+    display: flex;
+}
+.delete-user-btn img {
+    width: fit-content;
 }
 .check_mark{
     width: 20px;
