--- a/user_app/static/css/login.css
+++ b/user_app/static/css/login.css
@@ -1,25 +1,26 @@
 form {
-    width: calc(23vw + 10vh);
-    height: 45vh;
+    position: relative;
+    left: 50%;
+    top: 25%;
+    width: 525px;
     background-color: #262626;
-    border-radius: 2.5vw;
+    border-radius: 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
     align-items: center;
-    padding: 3vh 3vw;
-    position: relative;
+    gap: 20px;
+    padding: 20px 30px;
     left: 50%;
     top: 25%;
     transform: translate(-50%, -25%);
 }
 
 h2 {
-    font-family: 'Inter', sans-serif;
-    font-size: calc(1vw + 1vh);
+    color: #FFFFFF;
+    font-family: 'Inter';
+    font-size: 30px;
     font-weight: 500;
-    color: white;
-    text-align: center;
 }
 
 .login-block {
@@ -28,6 +29,7 @@ h2 {
     justify-content: start;
     align-items: center;
     width: 100%;
+    gap: 8px;
 }
 
 .inputs {
@@ -42,40 +44,40 @@ h2 {
 
 input {
     width: 100%;
-    height: calc(3.5vh + 1vw);
+    height: 55px;
     color: #FFFFFF;
-    font-family: 'Inter', sans-serif;
-    font-size: 1.3vw;
+    font-family: 'Inter';
+    font-size: 22px;
     font-weight: 300;
-    padding-left: 5%;
-    border-radius: 50px;
+    padding-left: 30px;
+    border-radius: 100px;
     border: none;
     outline: none;
+    
     background-color: #393939;
-    box-sizing: border-box;
 }
 
 .submit {
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: cener;
+    align-items: center;
     margin-top: 5vh;
     gap: 1vh;
 }
 
 .submit button {
     color: #FFFFFF;
-    font-family: 'Inter', sans-serif;
-    font-size: calc(1vw + 0.5vh);
+    font-family: 'Inter';
+    font-size: 22px;
     font-weight: 300;
-    padding: 1vh 5vw;
+    padding: 10px 40px;
     background-color: #3860FD;
+    width: 100%;
     border: none;
-    border-radius: 50px;
+    border-radius: 75px;
     outline: none;
     cursor: pointer;
-    transition: background-color 0.3s;
 }
 
 .submit button:hover {
@@ -88,13 +90,15 @@ input {
     font-weight: 300;
 }
 
-.submit p a {
-    color: #3860FD;
-    text-decoration: none;
+.submit p {
+    color: #FFFFFF;
+    font-family: 'Inter';
+    font-size: 18px;
+    font-weight: 300;
+    text-align: center;
 }
-
-.submit p a:hover {
-    text-decoration: underline;
+.submit p a{
+    color: #3860FD;
 }
 
 .choose-login {
@@ -118,4 +122,23 @@ input {
 .error-msg {
     color: red;
     font-size: 16px;
+}
+@media screen and (max-width: 600px) {
+    form {
+        width: 95%;
+    }
+    h2 {
+        font-size: 24px;
+    }
+    .button-auth {
+        font-size: 16px;
+    }
+    input {
+        height: 45px;
+        font-size: 18px;
+    }
+    .submit button {
+        font-size: 18px;
+        width: fit-content;
+    }
 }
